Mon Mar  8 11:30:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm.mpb:
          Using 'ndds' instead of 'rtidds' for IDL compiler flag
          'dds_impl'.

Mon Mar  8 11:20:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS4CCM_Traits.h:
        * connectors/dds4ccm/impl/dds/ndds/DDS4CCM_Traits.h:
          Renamed.

        * connectors/dds4ccm/tests/Policies/policies.mpc:
          Added requires += dds4ccm_ndds.

Mon Mar  8 11:09:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Base/Hello.idl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.idl:
          Added new pragma's which the end user can use to indicate for which
          interface and receptacles he wants to enable ami4ccm

Mon Mar  8 10:52:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/Base/Latency_Test_Base.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Base/CSL_DeadlineTest_Base.idl:
        * connectors/dds4ccm/tests/CSLQoS/Base/CSL_QoSTest_Base.idl:
        * connectors/dds4ccm/tests/CoherentUpdater/Base/CoherentUpdate_Test_Base.idl:
        * connectors/dds4ccm/tests/CoherentWriter/Base/CoherentWrite_Test_Base.idl:
        * connectors/dds4ccm/tests/InstanceHandle/Base/Writer_Base.idl:
        * connectors/dds4ccm/tests/KeyedSamples/Base/Keyed_Test_Base.idl:
        * connectors/dds4ccm/tests/KeyedWriter/Base/Writer_Base.idl:
        * connectors/dds4ccm/tests/ListenManyByMany/Base/LMBM_Test_Base.idl:
        * connectors/dds4ccm/tests/ListenNotEnabled/Base/LNE_Test_Base.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Base/PSL_SampleLost_Base.idl:
        * connectors/dds4ccm/tests/QueryFilter/Base/QueryFilter_Test_Base.idl:
        * connectors/dds4ccm/tests/Reader/Base/Reader_Test_Base.idl:
        * connectors/dds4ccm/tests/SLDisabled/Base/SL_Disabled_Base.idl: